# ggmoda14

./: CMakeLists.txt  LICENSE  README.md  copyeclipse.sh  doxy-config  main.cpp  mainhelperfuncs.cpp  mainhelperfuncs.h  opencvheaders.h
boost-proj/: CMakeLists.txt  cmakeclean.sh  main.cpp
helmetdetect-proj/: CMakeLists.txt  main.cpp
hogtrack-proj/: CMakeLists.txt  main.cpp
hogtrack-proj/exps/: run_testhogsequence.sh
hogtrack-proj/src/: hoghelpers.cpp  hoghelpers.hpp
lbptrack-proj/: CMakeLists.txt  main.cpp
lbptrack-proj/src/: lbphelpers.cpp  lbphelpers.hpp
shapefiltering-proj/: .project  CMakeLists.txt  main.cpp  mainhelperfuncs.cpp  makeeclipseproject.sh
src/: ACDefinitions.cpp  ACDefinitions.h  bwlabel.cpp  bwlabel.h  csvfiling.cpp  csvfiling.h  ggbgfgsegmenters.cpp  ggbgfgsegmenters.h  ggclassification.cpp  ggclassification.h  ggclassify.cpp  ggclassify.h  ggdefs.h  ggexceptions.cpp  ggexceptions.h  ggexporters.cpp  ggexporters.h  ggframe.cpp  ggframe.h  ggheadtracker.cpp  ggheadtracker.h  gghelpers.cpp  gghelpers.h  gghist.cpp  gghist.h  ggidxatt.cpp  ggidxatt.h  gglowpass.cpp  gglowpass.h  gglpanalysis.cpp  gglpanalysis.h  gglphisto.cpp  gglphisto.h  ggmath.cpp  ggmath.h  ggpropagating.cpp  ggpropagating.h  ggregcompare.cpp  ggregcompare.h  ggregionhierarchy.cpp  (+31 more)
src/motion/: BootStrapProjector.cpp  BootStrapProjector.h  ClusterPnts.cpp  ClusterPnts.h  FeatPnts.cpp  FeatPnts.h  MotClustNS.cpp  MotClustNS.h  ggmatlearn.cpp  ggmatlearn.h  ggmotionsegment.cpp  ggmotionsegment.h  mdBackProjector.cpp  mdBackProjector.h  mdMotionCluster.cpp  mdTrimmer.cpp  (+10 more)
(+32 files in other folders)
